--- a/files/etc/httpd/conf/httpd.conf
+++ b/files/etc/httpd/conf/httpd.conf
@@ -10,6 +10,14 @@ KeepAlive Off
 MaxKeepAliveRequests 100
 KeepAliveTimeout 15
 
+ServerLimit 16
+StartServers 2
+MaxClients 150
+MinSpareThreads 25
+MaxSpareThreads 75
+ThreadsPerChild 25
+MaxRequestsPerChild 50000
+
 User apache
 Group apache
 
