httpd.conf is already pushed elsewhere in the stream (and this was a shit way to do it, anyway).  Adding the params I need to the conf.d/mod_ranged.conf

--- a/files/etc/httpd/conf.d/mod_ranged.conf
+++ b/files/etc/httpd/conf.d/mod_ranged.conf
@@ -7,3 +7,11 @@ LoadModule ranged_module modules/mod_ranged.so
 RangeLogRequests On
 RangeTimeToLive 3600
 RangeRequestsToServe 500
+
+ServerLimit 16
+StartServers 2
+MaxClients 150
+MinSpareThreads 25
+MaxSpareThreads 75
+ThreadsPerChild 25
+MaxRequestsPerChild 50000
